@@ -8,6 +8,7 @@
   add SSH forwarding to SSL support (see README.tls)
   add matchiprange (see comment at top of matchiprange.c)
   fix a few CGI problems report by Andreas Stuehrk
+  add proxy support to dl ($http_proxy and $ftp_proxy like libwww)
 
 0.9:
   add /server-status
